@@ -45,7 +45,7 @@ class ApplicationController < ActionController::Base
     if current_user
       store_location
       flash[:notice] = "You must be logged out to access this page."
-      redirect_to preferences_url
+      redirect_to profile_url
       return false
     end
   end
