@@ -23,7 +23,8 @@
       :padding 0px
 
 .fieldWithErrors
-  :border-bottom 2px salmon solid
+  input
+    :background pink
 
 // Flash messages.
 //------------------------------------------------------------------------------
