@@ -4,7 +4,7 @@
       %small= activity.created_at.to_s(:mmddhhss).capitalize
     %tt
       = gravatar_for(activity.user, :size => "16x16", :default => "#{request.protocol + request.host_with_port}/images/avatar.jpg")
-      = activity.user.full_name
+      = link_to(activity.user.full_name, user_path(activity.user))
       = activity.action + (activity.action != "commented" ? " " : " on ")
       = activity.subject_type.downcase
       - if activity.subject
