@@ -14,5 +14,5 @@
       %span.cool
         = "completed " << distance_of_time_in_words(completed.completed_at, Time.now) << " ago"
         - if completed.completor.id != @current_user.id
-          = "by " << link_to(completed.completor.name, "mailto:" + completed.completor.email)
+          = "by " << link_to(completed.completor.full_name, user_path(completed.completor))
       
