@@ -1,5 +1,3 @@
 .title_tools
-  = link_to("Edit profile", edit_preference_path(@current_user)) + " | "
-  = link_to_function("Update notifications", %/alert("Not implemeneted yet.")/) + " | "
-  = link_to_function("Change password", %/alert("Not implemeneted yet.")/)
-.title Preferences
+.title Users
+%p Not implemented yet.
